--- a/style.css
+++ b/style.css
@@ -440,4 +440,22 @@ h1{
             "main   main"
             "footer footer";
         }
+        .contenedor-seccion2{
+            display:grid;
+            grid-template-columns: 1fr  1fr;
+            grid-template-rows: 40vh    5vh    100vh    15vh;
+            flex-wrap: wrap;
+            grid-template-areas: 
+            "header header"
+            "section    section"
+            "main   main"
+            "footer footer";
+        }
+        .fotos-caja-chica img{
+            width: 200px;
+            height: 250px;
+        }
+        .sec2-caja-grande{
+            justify-content: center;
+        }
     }
