agrgo bootstrap a publicar y transito.responsive

--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ footer{
 .contenedor-publicar{
     display:grid;
     grid-template-columns: 1fr  1fr;
-    grid-template-rows: 35vh    5vh    150vh    30vh;
+    grid-template-rows: 50vh    5vh    200vh    30vh;
     flex-wrap: wrap;
     grid-template-areas: 
     "header header"
@@ -215,12 +215,16 @@ h1{
 .contenedor-transitar{
     display:grid;
     grid-template-columns: 1fr  1fr;
-    grid-template-rows: 35vh    5vh    80vh    15vh;
+    grid-template-rows: 50vh    5vh    100vh    15vh;
     grid-template-areas: 
     "header header"
     "section    section"
     "main   main"
     "footer footer";
+}
+.form-select{
+    width: 200px;
+    height: 5px;
 }
 .fotos-caja-grande{
     display: flex;
@@ -379,6 +383,17 @@ h1{
     text-align: end;
     font-size: 8px;
 }
+.contenedor-publicar{
+    display:grid;
+    grid-template-columns: 1fr  1fr;
+    grid-template-rows: 50vh    5vh    100vh    30vh;
+    flex-wrap: wrap;
+    grid-template-areas: 
+    "header header"
+    "section    section"
+    "main   main"
+    "footer footer";
+}
 }
 @media screen and (max-width: 900px){
     -mision-caja-chica{
@@ -433,7 +448,7 @@ h1{
         .contenedor-publicar{
             display:grid;
             grid-template-columns: 1fr  1fr;
-            grid-template-rows: 40vh    5vh    80vh    30vh;
+            grid-template-rows: 40vh    5vh    100vh    30vh;
             flex-wrap: wrap;
             grid-template-areas: 
             "header header"
