--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,7 +13,6 @@ body {
     font-family: 'Fira Sans', sans-serif;
     color:$font-color-3;
     font-size: 13px;
-    background-color: $background-color-1;
     background-image: linear-gradient(58deg, #d479e9 0%, #d4e6e6 46%, #eb7fd2 100%);
 }
 .contenedor-mision{
@@ -46,7 +45,6 @@ header{
         a{  list-style: none;
     font-weight:bold;
     text-decoration: none;
-    color:$font-color-1;
     transition:all 1s;
     }   
         a:hover {
@@ -129,10 +127,10 @@ aside{
 } 
 footer{
     grid-area: footer;
-    background-image: url(images/imagenheader.jpg);
     background-size: contain;
     background-repeat:repeat;
     padding: 10px;
+    background-image: url(images/imagenheader.jpg);
 }
 .contenedor-adoptar{
     display:grid;
@@ -246,6 +244,12 @@ h1{
      p{
     padding: 5px;
     text-align:right;
+    }
+    header{
+        background-image: url(images/imagenheader.jpg);
+    }
+    footer{
+        background-image: url(images/imagenheader.jpg);
     }
 }
 @media screen and (max-width: 500px){
@@ -433,8 +437,7 @@ h1{
             display:grid;
             grid-template-columns: 1fr  1fr;
             grid-template-rows: 40vh    7vh    55vh    15vh;
-            grid-template-areas: 
-            "header header"
+            grid-template-areas:
             "section    section"
             "main   main"
             "footer footer";
