--- a/scss/style.css
+++ b/scss/style.css
@@ -21,10 +21,7 @@ body {
   -ms-grid-rows: 35vh    12vh    130vh    15vh;
       grid-template-rows: 35vh    12vh    130vh    15vh;
   background-color: #d479e9;
-      grid-template-areas: "header header"
- "section    section"
- "main   aside"
- "footer footer";
+      grid-template-areas: "header header" "section    section" "main   aside" "footer footer";
 }
 
 .contenedor-index {
@@ -35,10 +32,7 @@ body {
   -ms-grid-rows: 50vh    12vh    130vh    15vh;
       grid-template-rows: 50vh    12vh    130vh    15vh;
   background-color: #d479e9;
-      grid-template-areas: "header header"
- "section    section"
- "main   aside"
- "footer footer";
+      grid-template-areas: "header header" "section    section" "main   aside" "footer footer";
 }
 
 header {
@@ -46,7 +40,7 @@ header {
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-area: header;
-  background-image: url(images/imagenheader.jpg);
+  background-color: #d479e9;
   background-size: contain;
   padding: 10px;
 }
@@ -189,7 +183,7 @@ footer {
   background-size: contain;
   background-repeat: repeat;
   padding: 10px;
-  background-image: url(images/imagenheader.jpg);
+  background-color: #d479e9;
 }
 
 .contenedor-adoptar {
@@ -201,10 +195,7 @@ footer {
       grid-template-rows: 35vh    5vh    150vh    30vh;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-      grid-template-areas: "header header"
- "section    section"
- "main   main"
- "footer footer";
+      grid-template-areas: "header header" "section    section" "main   main" "footer footer";
 }
 
 .contenedor-publicar {
@@ -216,10 +207,7 @@ footer {
       grid-template-rows: 50vh    5vh    200vh    30vh;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-      grid-template-areas: "header header"
- "section    section"
- "main   main"
- "footer footer";
+      grid-template-areas: "header header" "section    section" "main   main" "footer footer";
 }
 
 .contenedor-seccion2 {
@@ -231,10 +219,7 @@ footer {
       grid-template-rows: 35vh    5vh    135vh    15vh;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-      grid-template-areas: "header header"
- "section    section"
- "main   main"
- "footer footer";
+      grid-template-areas: "header header" "section    section" "main   main" "footer footer";
 }
 
 .adoptar {
@@ -311,10 +296,7 @@ h1 {
       grid-template-columns: 1fr  1fr;
   -ms-grid-rows: 50vh    5vh    100vh    15vh;
       grid-template-rows: 50vh    5vh    100vh    15vh;
-      grid-template-areas: "header header"
- "section    section"
- "main   main"
- "footer footer";
+      grid-template-areas: "header header" "section    section" "main   main" "footer footer";
 }
 
 .form-select {
@@ -390,11 +372,7 @@ h1 {
         grid-template-columns: 1fr;
     -ms-grid-rows: 30vh    10vh   60vh   60vh    20vh;
         grid-template-rows: 30vh    10vh   60vh   60vh    20vh;
-        grid-template-areas: "header"
- "section"
- "main"
- "aside"
- "footer";
+        grid-template-areas: "header" "section" "main" "aside" "footer";
   }
   header {
     padding: 0px;
@@ -452,11 +430,7 @@ h1 {
         grid-template-columns: 1fr;
     -ms-grid-rows: 30vh    8vh    20vh   20vh    22vh;
         grid-template-rows: 30vh    8vh    20vh   20vh    22vh;
-        grid-template-areas: "header"
- "section"
- "main"
- "aside"
- "footer";
+        grid-template-areas: "header" "section" "main" "aside" "footer";
   }
   .contenedor-adoptar {
     display: -ms-grid;
@@ -465,10 +439,7 @@ h1 {
         grid-template-columns: 1fr  1fr;
     -ms-grid-rows: 35vh    1vh    75vh    15vh;
         grid-template-rows: 35vh    1vh    75vh    15vh;
-        grid-template-areas: "header header"
- "section    section"
- "main   main"
- "footer footer";
+        grid-template-areas: "header header" "section    section" "main   main" "footer footer";
   }
   .contenedor-transitar {
     display: -ms-grid;
@@ -477,10 +448,7 @@ h1 {
         grid-template-columns: 1fr  1fr;
     -ms-grid-rows: 35vh    1vh    50vh    15vh;
         grid-template-rows: 35vh    1vh    50vh    15vh;
-        grid-template-areas: "header header"
- "section    section"
- "main   main"
- "footer footer";
+        grid-template-areas: "header header" "section    section" "main   main" "footer footer";
   }
   .fotos-caja-grande {
     display: -webkit-box;
@@ -519,10 +487,7 @@ h1 {
         grid-template-rows: 35vh    1vh    170vh    15vh;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-        grid-template-areas: "header header"
- "section    section"
- "main   main"
- "footer footer";
+        grid-template-areas: "header header" "section    section" "main   main" "footer footer";
   }
   .sec2-caja-grande {
     display: -webkit-box;
@@ -550,10 +515,7 @@ h1 {
         grid-template-rows: 50vh    5vh    100vh    30vh;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-        grid-template-areas: "header header"
- "section    section"
- "main   main"
- "footer footer";
+        grid-template-areas: "header header" "section    section" "main   main" "footer footer";
   }
 }
 
@@ -570,15 +532,11 @@ h1 {
   .contenedor-mision {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
     -ms-grid-rows: 37vh    8vh    32vh   32vh    22vh;
         grid-template-rows: 37vh    8vh    32vh   32vh    22vh;
-        grid-template-areas: "header"
- "section"
- "main"
- "aside"
- "footer";
+        grid-template-areas: "header header" "section section" "main aside" "footer footer";
   }
   .contenedor-adoptar {
     display: -ms-grid;
@@ -587,10 +545,7 @@ h1 {
         grid-template-columns: 1fr  1fr;
     -ms-grid-rows: 38vh    1vh    140vh    15vh;
         grid-template-rows: 38vh    1vh    140vh    15vh;
-        grid-template-areas: "header header"
- "section    section"
- "main   main"
- "footer footer";
+        grid-template-areas: "header header" "section    section" "main   main" "footer footer";
   }
   .contenedor-index {
     display: -ms-grid;
@@ -599,10 +554,7 @@ h1 {
         grid-template-columns: 1fr  1fr;
     -ms-grid-rows: 40vh    12vh    130vh    15vh;
         grid-template-rows: 40vh    12vh    130vh    15vh;
-        grid-template-areas: "header header"
- "section    section"
- "main   aside"
- "footer footer";
+        grid-template-areas: "header header" "section    section" "main   aside" "footer footer";
   }
   .contenedor-transitar {
     display: -ms-grid;
@@ -611,9 +563,7 @@ h1 {
         grid-template-columns: 1fr  1fr;
     -ms-grid-rows: 40vh    7vh    55vh    15vh;
         grid-template-rows: 40vh    7vh    55vh    15vh;
-        grid-template-areas: "section    section"
- "main   main"
- "footer footer";
+        grid-template-areas: "header header" "section    section" "main   main" "footer footer";
   }
   .contenedor-publicar {
     display: -ms-grid;
@@ -624,10 +574,7 @@ h1 {
         grid-template-rows: 40vh    5vh    100vh    30vh;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-        grid-template-areas: "header header"
- "section    section"
- "main   main"
- "footer footer";
+        grid-template-areas: "header header" "section    section" "main   main" "footer footer";
   }
   .contenedor-seccion2 {
     display: -ms-grid;
@@ -638,10 +585,7 @@ h1 {
         grid-template-rows: 40vh    5vh    100vh    15vh;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-        grid-template-areas: "header header"
- "section    section"
- "main   main"
- "footer footer";
+        grid-template-areas: "header header" "section    section" "main   main" "footer footer";
   }
   .fotos-caja-chica img {
     width: 200px;
