--- a/scss/style.css
+++ b/scss/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap");
-.sec2-caja-grande, .fotos-caja-chica {
+section, main, .index-caja-chica, .mision-caja-chica, .adoptar img, .sec2-caja-grande, .fotos-caja-chica {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -51,7 +51,7 @@ header {
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-area: header;
-  background-color: #d479e9;
+  background-image: linear-gradient(58deg, #d479e9 0%, #d4e6e6 46%, #eb7fd2 100%);
   background-size: contain;
   padding: 10px;
 }
@@ -71,8 +71,8 @@ header a:hover {
 }
 
 header img {
-  width: 15%;
   height: 15%;
+  width: 15%;
   padding-top: 0px;
   padding-right: 30px;
   padding-left: 30px;
@@ -104,9 +104,6 @@ section {
   -ms-grid-column-span: 2;
   grid-area: section;
   text-align: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   padding: 20px;
 }
 
@@ -116,9 +113,6 @@ main {
   -ms-grid-column-span: 2;
   grid-area: main;
   text-align: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   padding: 10px;
 }
 
@@ -139,16 +133,8 @@ aside {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   padding: 40px;
   font-size: 15px;
   text-align: justify;
@@ -162,6 +148,13 @@ aside {
   transition: all 1s;
 }
 
+.index-caja-chica img:hover {
+  height: 35%;
+  width: 45%;
+  -webkit-transform: rotatez(10deg);
+          transform: rotatez(10deg);
+}
+
 .mision-caja-chica {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -171,16 +164,8 @@ aside {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   padding: 40px;
   font-size: 15px;
   text-align: justify;
@@ -194,7 +179,7 @@ footer {
   background-size: contain;
   background-repeat: repeat;
   padding: 10px;
-  background-color: #d479e9;
+  background-image: linear-gradient(58deg, #d479e9 0%, #d4e6e6 46%, #eb7fd2 100%);
 }
 
 .contenedor-adoptar {
@@ -243,8 +228,6 @@ footer {
   height: 20%;
   width: 30%;
   padding: 10px;
-  -ms-flex-line-pack: center;
-      align-content: center;
   -webkit-animation-name: animacion1;
           animation-name: animacion1;
   -webkit-animation-duration: 5s;
@@ -311,8 +294,8 @@ h1 {
 }
 
 .form-select {
-  width: 200px;
   height: 5px;
+  width: 200px;
 }
 
 .fotos-caja-grande {
