--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap');
 
+
 @mixin tamaños ($alto,$ancho){
     height: $alto;
     width: $ancho;
@@ -32,6 +33,7 @@ body {
     color: $font-color-3;
     background-image: linear-gradient(58deg, #d479e9 0%, #d4e6e6 46%, #eb7fd2 100%);
 }
+
 .contenedor-mision{
     display:grid;
     grid-template-columns: 1fr  1fr;
@@ -43,6 +45,7 @@ body {
     "main   aside"
     "footer footer";
 }
+
 .contenedor-index{
     display:grid;
     grid-template-columns: 1fr  1fr;
@@ -54,9 +57,10 @@ body {
     "main   aside"
     "footer footer";
 }
+
 header{
     grid-area: header;
-    background-color: #d479e9;
+    background-image: linear-gradient(58deg, #d479e9 0%, #d4e6e6 46%, #eb7fd2 100%);
     background-size: contain;
     padding: 10px;
         a{  list-style: none;
@@ -70,14 +74,14 @@ header{
     font-size: 20px;
     }
         img {
-    width: 15%;
-    height: 15%;
+    @include tamaños(15%,15%); 
     padding-top:0px;
     padding-right: 30px; 
     padding-left: 30px;
     text-align: left;
     border-radius: 50%;
     }
+
 }  
 header  .li-nav {
     display: inline;
@@ -87,6 +91,7 @@ header  ul {
     list-style: none;
     text-align: center;     
 } 
+
 .ingresar {
     text-align: right;
     padding-top: 20px;
@@ -94,16 +99,18 @@ header  ul {
     padding-bottom: 0px;
     padding-left: 0px;
 }
+
 section{
     grid-area: section;
     text-align: center;
-    align-items: center;
+    @extend %alienacion;
     padding: 20px;
 }
+
 main{
     grid-area: main;   
     text-align: center;
-    align-items: center;
+    @extend %alienacion;
     padding: 10px;
 }
 
@@ -112,43 +119,46 @@ aside{
     text-align: center;
     padding: 10px;
 }
+
 .index-caja-chica {
-    display: flex;
+    display: map-get($cont-small, display);
     display:inline;
     flex-direction:row;
-    justify-content: center; 
     flex-wrap: wrap;
-    align-content: center;
-    align-items:center;
     padding: 40px;
     font-size: 15px;
     text-align: justify;
+    @extend %alienacion;
         img{
-    height: 30%;
-    width: 40%;
+    @include tamaños(30%,40%); 
     padding: 10px;
     transition: all 1s;
 }
+        img:hover{
+    @include tamaños(35%,45%); 
+    transform: rotatez(10deg);
 }
+}
+
 .mision-caja-chica {
-    display: flex;
+    display: map-get($cont-small, display);
     display:inline;
     flex-direction:row;
-    justify-content: center; 
     flex-wrap: wrap;
-    align-content: center;
-    align-items:center;
     padding: 40px;
     font-size: 15px;
     text-align: justify;
+    @extend %alienacion;
 } 
+
 footer{
     grid-area: footer;
     background-size: contain;
     background-repeat:repeat;
     padding: 10px;
-    background-color: #d479e9;
+    background-image: linear-gradient(58deg, #d479e9 0%, #d4e6e6 46%, #eb7fd2 100%);
 }
+
 .contenedor-adoptar{
     display:grid;
     grid-template-columns: 1fr  1fr;
@@ -160,6 +170,7 @@ footer{
     "main   main"
     "footer footer";
 }
+
 .contenedor-publicar{
     display:grid;
     grid-template-columns: 1fr  1fr;
@@ -171,6 +182,7 @@ footer{
     "main   main"
     "footer footer";
 }
+
 .contenedor-seccion2{
         display:grid;
         grid-template-columns: 1fr  1fr;
@@ -182,43 +194,49 @@ footer{
         "main   main"
         "footer footer";
     }
+
 .adoptar{
     font-size: 40px;
     padding: 30px;
     text-align: center;
         img{
-    height: 20%;
-    width: 30%;
+    @include tamaños(20%,30%); 
     padding: 10px;
-    align-content: center;
+    @extend %alienacion;
     animation-name:animacion1;
     animation-duration: 5s;
     animation-iteration-count: infinite;
     animation-delay: 1s;
     }
 }
+
 @keyframes animacion1{
     0%{width: 30%;}
     50%{width: 35%;}
     100%{width: 38%;}
 }
+
 .espacio p{
-    padding: 5px;
+    padding: map-get($cont-small, padding);
 }
+
 .espacio-formulario p{
-padding: 5px;
+    padding: map-get($cont-small, padding);
 }
+
 h2{
     padding: 10px;
     text-align: center;
     font-size: 15px;
     padding: 4px;
 }
+
 h1{
     text-align: center;
     font-size: 17px;
     padding: 2px;
 }
+
 .contenedor-transitar{
     display:grid;
     grid-template-columns: 1fr  1fr;
@@ -229,37 +247,40 @@ h1{
     "main   main"
     "footer footer";
 }
+
 .form-select{
-    width: 200px;
-    height: 5px;
+    @include tamaños(5px,200px); 
 }
+
 .fotos-caja-grande{
-    display: flex;
+    display: map-get($cont-small, display);
     flex-direction:row;
     align-content:space-around;
     align-items: center;
-    padding: 5px;
+    padding: map-get($cont-small, padding);
     text-align: end;
     font-size: 8px;
 }
+
 .sec2-caja-grande{
     flex-direction:row;
     display: map-get($cont-small, display);
     padding: map-get($cont-small, padding);
     align-content:space-around;
     @extend %alienacion;
-    padding: 5px;
+    padding: map-get($cont-small, padding);
     text-align: end;
     font-size: 8px;
 }
+
 .fotos-caja-chica {
     @extend %alienacion;
     img{
         @include tamaños(180px,150px); 
-        padding: 5px;
+        padding: map-get($cont-small, padding);
     }
      p{
-    padding: 5px;
+    padding: map-get($cont-small, padding);
     text-align:right;
     }
     header{
@@ -269,10 +290,12 @@ h1{
         background-image: url(images/imagenheader.jpg);
     }
 }
+
 @media screen and (max-width: 500px){
     body {
         font-size: 11px;
     }
+
     .contenedor-index{
         display:grid;
         grid-template-columns: 1fr;
@@ -284,6 +307,7 @@ h1{
         "aside"
         "footer";
     }
+
     header{
         padding: 0px;
         background-repeat: repeat-x;
@@ -301,6 +325,7 @@ h1{
         padding: 2px;
     }
     } 
+
     .ingresar{
         text-align: center;
         padding-top: 10px;
@@ -308,9 +333,11 @@ h1{
         padding-bottom: opx;
         padding-left: 0px;
     }
+
     section{
         padding: 5px;
     }
+
     .index-caja-chica {
         padding: 2px;
         font-size: 8px;
@@ -320,14 +347,17 @@ h1{
         padding: 8px;
     }
     }
+
     .mision-caja-chica {
         padding: 2px;
         font-size: 8px;
         text-size-adjust:initial;
     } 
+
     footer{
         padding: 5px;
     }
+
     .contenedor-mision{
         display:grid;
         grid-template-columns: 1fr;
@@ -339,6 +369,7 @@ h1{
         "aside"
         "footer";
     }
+
     .contenedor-adoptar{
         display:grid;
         grid-template-columns: 1fr  1fr;
@@ -349,6 +380,7 @@ h1{
         "main   main"
         "footer footer";
     }
+
     .contenedor-transitar{
         display:grid;
         grid-template-columns: 1fr  1fr;
@@ -359,6 +391,7 @@ h1{
         "main   main"
         "footer footer";
     }
+
     .fotos-caja-grande{
         display: flex;
         flex-direction:row;
@@ -374,10 +407,12 @@ h1{
         align-content:space-around;
     }
 }    
+
     .fotos-caja-chica   p{
         padding: 5px;
         text-align:right;
 }
+
 .contenedor-seccion2{
     display:grid;
     grid-template-columns: 1fr  1fr;
@@ -389,8 +424,9 @@ h1{
     "main   main"
     "footer footer";
 }
+
 .sec2-caja-grande{
-    display: flex;
+    display: map-get($cont-small, display);
     flex-direction:column;
     align-content:space-around;
     align-items: center;
@@ -398,6 +434,7 @@ h1{
     text-align: end;
     font-size: 8px;
 }
+
 .contenedor-publicar{
     display:grid;
     grid-template-columns: 1fr  1fr;
@@ -410,15 +447,18 @@ h1{
     "footer footer";
 }
 }
+
 @media screen and (max-width: 900px){
     -mision-caja-chica{
         font-size: 100px;
     }
 }
+
 @media screen and (min-width:800px) and (max-width: 3000px){
         header  .li-nav {
          font-size: 20px;
         }
+
         .contenedor-mision{
             display:grid;
             grid-template-columns: 1fr 1fr;
@@ -429,6 +469,7 @@ h1{
             "main aside"
             "footer footer";
         }
+
         .contenedor-adoptar{
             display:grid;
             grid-template-columns: 1fr  1fr;
@@ -439,6 +480,7 @@ h1{
             "main   main"
             "footer footer";
         }
+
         .contenedor-index{
             display:grid;
             grid-template-columns: 1fr  1fr;
@@ -449,6 +491,7 @@ h1{
             "main   aside"
             "footer footer";
         }
+
         .contenedor-transitar{
             display:grid;
             grid-template-columns: 1fr  1fr;
@@ -459,6 +502,7 @@ h1{
             "main   main"
             "footer footer";
         } 
+
         .contenedor-publicar{
             display:grid;
             grid-template-columns: 1fr  1fr;
@@ -470,6 +514,7 @@ h1{
             "main   main"
             "footer footer";
         }
+
         .contenedor-seccion2{
             display:grid;
             grid-template-columns: 1fr  1fr;
@@ -481,10 +526,12 @@ h1{
             "main   main"
             "footer footer";
         }
+
         .fotos-caja-chica img{
             width: 200px;
             height: 250px;
         }
+
         .sec2-caja-grande{
             justify-content: center;
         }
