--- a/scss/style.css
+++ b/scss/style.css
@@ -279,8 +279,12 @@ h2 {
 
 h1 {
   text-align: center;
-  font-size: 17px;
+  font-size: 19px;
   padding: 2px;
+}
+
+.h1formularios h1 {
+  font-weight: bolder;
 }
 
 .contenedor-transitar {
@@ -328,7 +332,7 @@ h1 {
   -ms-flex-line-pack: distribute;
       align-content: space-around;
   padding: 5px;
-  text-align: end;
+  text-align: start;
   font-size: 8px;
 }
 
