--- a/scss/style.scss
+++ b/scss/style.scss
@@ -37,7 +37,7 @@ body {
 .contenedor-mision{
     display:grid;
     grid-template-columns: 1fr  1fr;
-    grid-template-rows: 35vh    12vh    130vh    15vh;
+    grid-template-rows: 40vh    12vh    80vh    15vh;
     background-color:$background-color-1;
     grid-template-areas: 
     "header header"
@@ -125,7 +125,7 @@ aside{
     display:inline;
     flex-direction:row;
     flex-wrap: wrap;
-    padding: 40px;
+    padding: 30px;
     font-size: 15px;
     text-align: justify;
     @extend %alienacion;
@@ -299,7 +299,7 @@ h1{
     .contenedor-index{
         display:grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 30vh    10vh   60vh   60vh    20vh;
+        grid-template-rows: 30vh    10vh   90vh   90vh    20vh;
         grid-template-areas: 
         "header"
         "section"
@@ -339,7 +339,9 @@ h1{
     }
 
     .index-caja-chica {
-        padding: 2px;
+        padding-left: 2px;
+        padding-right: 2px;
+        padding-bottom: 10px;
         font-size: 8px;
         img{
         height: 33%;
@@ -462,7 +464,7 @@ h1{
         .contenedor-mision{
             display:grid;
             grid-template-columns: 1fr 1fr;
-            grid-template-rows: 37vh    8vh    32vh   32vh    22vh;
+            grid-template-rows: 40vh    8vh    32vh   32vh    15vh;
             grid-template-areas:
             "header header"
             "section section"
@@ -473,7 +475,7 @@ h1{
         .contenedor-adoptar{
             display:grid;
             grid-template-columns: 1fr  1fr;
-            grid-template-rows: 38vh    1vh    140vh    15vh;
+            grid-template-rows: 40vh    1vh    140vh    15vh;
             grid-template-areas: 
             "header header"
             "section    section"
@@ -506,7 +508,7 @@ h1{
         .contenedor-publicar{
             display:grid;
             grid-template-columns: 1fr  1fr;
-            grid-template-rows: 40vh    5vh    100vh    30vh;
+            grid-template-rows: 40vh    5vh    100vh    15vh;
             flex-wrap: wrap;
             grid-template-areas: 
             "header header"
